# ParseTree-CPP

./: .gitignore  CMakeLists.txt  LeafAncestorMetric.h  Metric.h  ModifiedParsevalMetric.cpp  NodeCollector.cpp  ParseNode.cpp  ParseNode.h  ParseTree.cpp  ParseTree.h  ParsevalMetric.cpp  README.md  Symbol.cpp  Symbol.h  TestTreeBank.cpp  TreeBank.cpp  TreeBank.h  conanfile.py  conanfile.txt
NodeCondition/: IsEnglishLeaf.cpp  IsEnglishLeaf.h  IsLeaf.cpp  NodeCondition.h
Test/: MetricTest.cpp  NodeCollectorTest.cpp  ParallelTreeBankTest.cpp  ParseTreeTest.cpp  SymbolTest.cpp  TreeBankTest.cpp
src/: CMakeLists.txt  ConstituentSpan.cpp  ConstituentSpan.h  ModifiedLeafAncestorMetric.cpp  NodeCollector.cpp  NodeCollector.h  ParallelTreeBank.cpp  ParallelTreeBank.h  ParseNode.cpp  ParseNode.h  ParseTree.cpp  ParseTree.h  ParsevalMetric.h  Symbol.cpp  Symbol.h  TreeBank.cpp  TreeBank.h
src/EvaluationMetrics/: LeafAncestorMetric.cpp  LeafAncestorMetric.h  Metric.h  ModifiedLeafAncestorMetric.cpp  ModifiedLeafAncestorMetric.h  ModifiedParsevalMetric.cpp  ModifiedParsevalMetric.h  ParsevalMetric.cpp  ParsevalMetric.h
src/NodeCondition/: IsLeaf.cpp  IsLeaf.h
